# data-reader

./: README.md
forth_hand_publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  seq0.txt
forth_hand_publisher/meshes/: cup_1.stl  cup_2.stl  cup_3.stl  cup_4.stl  cup_5.stl  noobject.stl
forth_hand_publisher/src/: forth_hand_publisher.cpp
pisa_hand_publisher/: CMakeLists.txt  package.xml  seq0.txt
pisa_hand_publisher/datiPosture/: mat_C.txt  vet_mu.txt
pisa_hand_publisher/src/: pisa_hand_publisher.cpp
